Modified home callout css

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome from our Home Page</h1>
+<div class="home-callout text-center container-fluid">
+    <h1>Welcome to my Profile</h1>
+    <h3> My Portfolio</h3>
+</div>
