--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>About Page</h1>
+<div class="container text-center">
+    <h1>About Page</h1>
+    <p>We are DevMatch. Our company focuses on creating an exclusive community
+    for developers and entrepeneurs to meet. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, delectus, voluptates asperiores nam distinctio reiciendis quibusdam! Consequuntur officiis tempore eveniet maiores, nam quae. Magnam recusandae id sed, itaque, laboriosam quis.</p>
+</div>
