--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+
   <h3 class="text-center">Contact Us</h3>
   
     <div class="col-md-4 col-md-offset-4">
@@ -20,8 +20,9 @@
               <%= f.label :comments %>
               <%= f.text_area :comments, class: 'form-control' %>
           </div>
-                  
-          <%= f.submit 'Submit', class: 'btn btn-default' %>
+           <div class="actions form-group">        
+            <%= f.submit 'Submit', class: 'btn btn-success' %>
+          </div>
         <% end %>
       </div>
     </div> 
