Added bootstrap to login form and contact-us

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -20,8 +20,8 @@
               <%= f.label :comments %>
               <%= f.text_area :comments, class: 'form-control' %>
           </div>
-           <div class="actions form-group">        
-            <%= f.submit 'Submit', class: 'btn btn-success' %>
+           <div class="actions">        
+            <%= f.submit 'Submit', class: 'btn btn-success form-control' %>
           </div>
         <% end %>
       </div>
