--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -85,8 +85,15 @@ h1, h2, h3 {
   padding-bottom: 100px;
 }
 
-.alert-notice {
-  display: none;
+.flash-container {
+  position: absolute;
+  width: 100%;
+}
+.alert-notice, .alert-alert {
+  text-align: center;
+  background: #ffffff38;
+  border-color: #ffffff21;
+  margin-top: -20px;
 }
 
 .home-signup-links {
