--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -91,9 +91,9 @@ h1, h2, h3 {
 }
 .alert-notice, .alert-alert {
   text-align: center;
-  background: #ffffff38;
-  border-color: #ffffff21;
-  margin-top: -20px;
+  background: rgba(255, 255, 255, 0.3);
+  border-color: rgba(255, 255, 255, 0.5);
+  margin-top: -14px;
 }
 
 .home-signup-links {
